MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Account_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Type__c</fullName>
    <formula>IF(
    ISBLANK(AccountId),
    &quot;Visitor Case&quot;,
    IF(
        TEXT(Account.CustomerType__c) = &quot;VIP Client&quot;,
        &quot;VIP Case&quot;,
        &quot;Non VIP Case&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Customer Type</label>
    <type>Text</type>
</CustomField>