MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Owner Email</label>
    <type>Email</type>
</CustomField>