MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name</label>
    <type>TextArea</type>
</CustomField>