MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Age_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_In_Days__c</fullName>
    <formula>IF(
NOT(ISBLANK(Aging_Days__c)),
Aging_Days__c,
(
IF(
ISBLANK(ClosedDate),
(NOW() - CreatedDate),
(ClosedDate - CreatedDate)
)
)
)</formula>
    <label>Age In Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>