MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Agent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Agent_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>