MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Aging_Divisor__c.field-meta.xml
<CustomField>
    <fullName>Aging_Divisor__c</fullName>
    <label>Aging Divisor</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>