MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Aging_Hours__c.field-meta.xml
<CustomField>
    <fullName>Aging_Hours__c</fullName>
    <label>Aging (Hours)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>