MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Breached__c.field-meta.xml
<CustomField>
    <fullName>Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Breached</label>
    <type>Checkbox</type>
</CustomField>