MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Business_Hour_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Hour_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Hour Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>