MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Case_Approver__c.field-meta.xml
<CustomField>
    <fullName>Case_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>