MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>