MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Case_Owner_Assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Assigned_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Owner Assigned Time</label>
    <type>DateTime</type>
</CustomField>