MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Case_Owner_Target_SLA__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Target_SLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Owner Target SLA</label>
    <type>DateTime</type>
</CustomField>