MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Case_Performance__c.field-meta.xml
<CustomField>
    <fullName>Case_Performance__c</fullName>
    <label>Case Performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Expected</fullName>
            </value>
            <value>
                <fullName>Not Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>