MODON MRE BPDEV/force-app/main/default/objects/Case/fields/CaseCategory__c.field-meta.xml
<CustomField>
    <fullName>CaseCategory__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Vertical__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Addition/Deletion of Joint Owner</fullName>
            </value>
            <value>
                <fullName>ADM/ADGM Registration</fullName>
            </value>
            <value>
                <fullName>ADM Fee Refund</fullName>
            </value>
            <value>
                <fullName>Advertisements/Events/Digital/PR</fullName>
            </value>
            <value>
                <fullName>Bank Details</fullName>
            </value>
            <value>
                <fullName>Bounced Cheque</fullName>
            </value>
            <value>
                <fullName>Broker Commission Enquiries</fullName>
            </value>
            <value>
                <fullName>Broker Enquiry</fullName>
            </value>
            <value>
                <fullName>Building Guideline Request</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Refund</fullName>
            </value>
            <value>
                <fullName>Cheque Replacement</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Consolidation</fullName>
            </value>
            <value>
                <fullName>Construction Update</fullName>
            </value>
            <value>
                <fullName>Contact Details Update</fullName>
            </value>
            <value>
                <fullName>Court Order</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Customer Data Privacy</fullName>
            </value>
            <value>
                <fullName>Default Notice</fullName>
            </value>
            <value>
                <fullName>Delay Handover</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Equity Transfer</fullName>
            </value>
            <value>
                <fullName>Expired Cheque Collection</fullName>
            </value>
            <value>
                <fullName>Fee Waiver</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Golden visa</fullName>
            </value>
            <value>
                <fullName>Handover Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>