MODON MRE BPDEV/force-app/main/default/objects/Case/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>VIP Case</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Visitor Case</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non VIP Case</fullName>
            </value>
            <value>
                <fullName>Departmental</fullName>
                <isActive>false</isActive>
                <label>Departmental</label>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
                <isActive>false</isActive>
                <label>General Enquiry</label>
            </value>
            <value>
                <fullName>Negative Feedback</fullName>
                <isActive>false</isActive>
                <label>Negative Feedback</label>
            </value>
            <value>
                <fullName>Service Request</fullName>
                <isActive>false</isActive>
                <label>Service Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>