MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Category_SubCategory_Updated__c.field-meta.xml
<CustomField>
    <fullName>Category_SubCategory_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Category SubCategory Updated</label>
    <type>Checkbox</type>
</CustomField>