MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>800 Modon</fullName>
            </value>
            <value>
                <fullName>Direct Email</fullName>
            </value>
            <value>
                <fullName>Internal Apps</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
                <isActive>false</isActive>
                <label>Broker</label>
            </value>
            <value>
                <fullName>Broker Portal</fullName>
                <isActive>false</isActive>
                <label>Broker Portal</label>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
                <isActive>false</isActive>
                <label>Customer Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>