MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Classification_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Classification_Level_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Classification Level 1</label>
    <type>TextArea</type>
</CustomField>