MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Classification_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Classification_Level_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Classification Level 2</label>
    <type>TextArea</type>
</CustomField>