MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Collection_Associate__c.field-meta.xml
<CustomField>
    <fullName>Collection_Associate__c</fullName>
    <formula>Latest_Sales_Order__r.Collection_Associate__r.FirstName + &quot; &quot; + Latest_Sales_Order__r.Collection_Associate__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Associate</label>
    <type>Text</type>
</CustomField>