MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Comments_Shared_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Comments_Shared_with_Customer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments Shared with Customer</label>
    <type>TextArea</type>
</CustomField>