MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Complaint_Classification__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Classification__c</fullName>
    <label>Complaint Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>