MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Complaint_Details__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complaint Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>