MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Creator_Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Creator_Is_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creator Is Owner</label>
    <type>Checkbox</type>
</CustomField>