MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <formula>IF(New_Owner__c == null, OwnerId, New_Owner__c )</formula>
    <label>Current Owner</label>
    <type>Text</type>
</CustomField>