MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Current_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Name__c</fullName>
    <formula>IF(New_Owner_Name__c == null, Owner_Name__c, New_Owner_Name__c)</formula>
    <label>Current Owner Name</label>
    <type>Text</type>
</CustomField>