MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Customer_Follow_Up_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Follow_Up_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Follow Up Comments</label>
    <type>TextArea</type>
</CustomField>