MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Customer_IBAN_Letter_Link__c.field-meta.xml
<CustomField>
    <fullName>Customer_IBAN_Letter_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer IBAN Letter Link</label>
    <type>Url</type>
</CustomField>