MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <type>TextArea</type>
</CustomField>