MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Customer_Name_Communication__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Communication__c</fullName>
    <formula>IF(
    TEXT(Customer_Type__c) = &quot;Visitor&quot;,
    TRIM(
        Visitor_First_Name__c &amp; &quot; &quot; &amp; Visitor_Last_Name__c
    ),
    Customer_Name__c
)</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>