MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Phone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>