MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Customer_Refund_Options__c.field-meta.xml
<CustomField>
    <fullName>Customer_Refund_Options__c</fullName>
    <label>Customer Refund Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>