MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Customer_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Customer_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Remarks</label>
    <type>TextArea</type>
</CustomField>