MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Customer_Remarks_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Remarks_Updated_Date__c</fullName>
    <description>Stores the date and time when customer remarks were updated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Remarks Updated Date</label>
    <type>DateTime</type>
</CustomField>