MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Customer_Type__c, &quot;Visitor&quot;),
        ISBLANK(AccountId)
    ),
    &quot;&quot;,
    Account.Customer_Segmentation__c
)</formula>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>