MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Duplicate_Cases__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Cases__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duplicate Cases</label>
    <type>TextArea</type>
</CustomField>