MODON MRE BPDEV/force-app/main/default/objects/Case/fields/EmailCaseClosedDate__c.field-meta.xml
<CustomField>
    <fullName>EmailCaseClosedDate__c</fullName>
    <formula>DATETIMEVALUE(ClosedDate + (4/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailCaseClosedDate</label>
    <type>DateTime</type>
</CustomField>