MODON MRE BPDEV/force-app/main/default/objects/Case/fields/EmailCaseCreateDate__c.field-meta.xml
<CustomField>
    <fullName>EmailCaseCreateDate__c</fullName>
    <formula>DATETIMEVALUE(CreatedDate + (4/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailCaseCreateDate</label>
    <type>DateTime</type>
</CustomField>