MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Emirates_Id__c.field-meta.xml
<CustomField>
    <fullName>Emirates_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>