MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Escalation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EscalationManager</relationshipName>
    <type>Lookup</type>
</CustomField>