MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Expression_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Expression_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expression of Interest</label>
    <referenceTo>Expressionofinterest__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>