MODON MRE BPDEV/force-app/main/default/objects/Case/fields/FCR_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>FCR_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I confirm this is a FCR Case</label>
    <type>Checkbox</type>
</CustomField>