MODON MRE BPDEV/force-app/main/default/objects/Case/fields/First_Escalation_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Escalation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Escalation Sent</label>
    <type>Checkbox</type>
</CustomField>