MODON MRE BPDEV/force-app/main/default/objects/Case/fields/First_Response_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Response Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>