MODON MRE BPDEV/force-app/main/default/objects/Case/fields/First_Response_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Sent_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Response Sent Time</label>
    <type>DateTime</type>
</CustomField>