MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Genesys_Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Conversation_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Conversation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>