MODON MRE BPDEV/force-app/main/default/objects/Case/fields/IBAN_Number__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN Number</label>
    <type>TextArea</type>
</CustomField>