MODON MRE BPDEV/force-app/main/default/objects/Case/fields/In_Progress_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>In Progress Timestamp</label>
    <type>DateTime</type>
</CustomField>