MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Internal_Escalation_From__c.field-meta.xml
<CustomField>
    <fullName>Internal_Escalation_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Escalation From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EscalationFrom</relationshipName>
    <type>Lookup</type>
</CustomField>