MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Internal_Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Internal_Escalation_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Escalation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>