MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Internal_Escalation_To__c.field-meta.xml
<CustomField>
    <fullName>Internal_Escalation_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Escalation To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EscalateTo</relationshipName>
    <type>Lookup</type>
</CustomField>