MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Is_Closed_CustomerEmail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed_CustomerEmail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed CustomerEmail Sent</label>
    <type>Checkbox</type>
</CustomField>