MODON MRE BPDEV/force-app/main/default/objects/Case/fields/IS_Customer_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>IS_Customer_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS Customer Follow Up</label>
    <type>Checkbox</type>
</CustomField>