MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Is_Owner_From_Correct_Queue__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_From_Correct_Queue__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Owner From Correct Queue</label>
    <type>Checkbox</type>
</CustomField>