MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Is_Owner_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owner Updated</label>
    <type>Checkbox</type>
</CustomField>