MODON MRE BPDEV/force-app/main/default/objects/Case/fields/IsMyCase__c.field-meta.xml
<CustomField>
    <fullName>IsMyCase__c</fullName>
    <formula>OR(
    New_Owner__c = $User.Id,
    CreatedById = $User.Id,
    LastModifiedById = $User.Id
)</formula>
    <inlineHelpText>LoggedInUser Is Either New_Owner__c OR Creator OR LastModifiedBy</inlineHelpText>
    <label>IsMyCase</label>
    <type>Checkbox</type>
</CustomField>