MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Last_Customer_Followup__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Followup__c</fullName>
    <description>Stores the date and time of the last customer follow-up</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Customer Followup</label>
    <type>DateTime</type>
</CustomField>