MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Last_Updated_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Activity__c</fullName>
    <label>Last Updated Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Responded</fullName>
            </value>
            <value>
                <fullName>Customer Replied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>