MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Latest_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Latest_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>SalesOrders</relationshipName>
    <type>Lookup</type>
</CustomField>