MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <formula>IF(
    BEGINS(OwnerId, &quot;005&quot;),
    Owner:User.Manager.Email,
    NULL
)</formula>
    <label>Manager Email</label>
    <type>Text</type>
</CustomField>