MODON MRE BPDEV/force-app/main/default/objects/Case/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <formula>IF(
    BEGINS(OwnerId, &quot;005&quot;),
    Owner:User.Manager.FirstName,
    NULL
)</formula>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>